--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "pinia": "^2.2.6",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@heroicons/vue": "^2.2.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
